--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -4,7 +4,9 @@ fastapi==0.85.0
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
+Jinja2==3.1.2
 joblib==1.2.0
+MarkupSafe==2.1.2
 numpy==1.23.3
 pandas==1.5.0
 pydantic==1.10.2
